feat: done read cards from stack

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
                 <span class="shuffle-button">Замешать колоду</span>
                 <div class="deck" style="background-image: url(./assets/mythicCardBackground.png);">
                 </div>
-                <div class="last-card">                    
+                <div class="last-card">
+                   <img class="image" src="" alt="">
                 </div>
             </div>
         </div>
